Last commit: Add controller integration test.